--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <modules>
         <module>all-in-one</module>
         <module>NoVoid</module>
+        <module>AnyHat</module>
     </modules>
 
     <developers>
@@ -61,6 +62,7 @@
 
     <build>
         <defaultGoal>clean package</defaultGoal>
+        <finalName>${project.parent.artifactId}-${project.artifactId}-${project.version}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
