--- a/ByeByeWither/pom.xml
+++ b/ByeByeWither/pom.xml
@@ -8,6 +8,7 @@
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <description>Disabling wither and dragon spawn.</description>
 
     <artifactId>ByeByeWither</artifactId>
 
