--- a/ImmutableSpawner/pom.xml
+++ b/ImmutableSpawner/pom.xml
@@ -8,6 +8,7 @@
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <description>Prevent changing spawners using MOB eggs.</description>
 
     <artifactId>ImmutableSpawner</artifactId>
 
