--- a/all-in-one/pom.xml
+++ b/all-in-one/pom.xml
@@ -62,6 +62,11 @@
             <artifactId>JoinMessage</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>jp.jyn</groupId>
+            <artifactId>DocklessVehicle</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
