reduce duplicate code

--- a/CrystalGuard/pom.xml
+++ b/CrystalGuard/pom.xml
@@ -12,4 +12,11 @@
 
     <artifactId>CrystalGuard</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>jp.jyn</groupId>
+            <artifactId>MoreUtils</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 </project>
