--- a/NoVoid/pom.xml
+++ b/NoVoid/pom.xml
@@ -12,5 +12,11 @@
 
     <artifactId>NoVoid</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>jp.jyn</groupId>
+            <artifactId>MoreUtils</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+    </dependencies>
 </project>
