--- a/all-in-one/src/main/resources/config.yml
+++ b/all-in-one/src/main/resources/config.yml
@@ -88,6 +88,16 @@ ThisWorld:
       subtitle: "&kworld_the_end"
       actionbar: "vs EnderDragon"
 
+LoreBook:
+  enable: true
+  notEnough: "&cNot enough experience points!"
+  onlyDurable: false
+  # Due to Bukkit restrictions, the required experience points will not be displayed on the anvil.
+  experience: 0
+  maxLength: 24
+  maxLine: 12
+
+
 # //*<!-- syntax -->*/
 # &0->Black(#000000)
 # &1->Dark Blue(#0000AA)
