--- a/all-in-one/src/main/resources/config.yml
+++ b/all-in-one/src/main/resources/config.yml
@@ -97,6 +97,22 @@ LoreBook:
   maxLength: 24
   maxLine: 12
 
+SlabCombine:
+  enable: true
+  exclude: [ ]
+  custom: { }
+  # example
+  #exclude:
+  #  - "OAK_SLAB"
+  #custom:
+  #  OAK_LOG*12:
+  #    key: "unique_recipe_name" # Optional
+  #    layout:
+  #      - "OOO"
+  #      - "OOO"
+  #      - "OOO"
+  #    material:
+  #      O: "OAK_WOOD"
 
 # //*<!-- syntax -->*/
 # &0->Black(#000000)
