--- a/LoreBook/pom.xml
+++ b/LoreBook/pom.xml
@@ -8,6 +8,7 @@
         <version>0.0.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <description>Set the lore with books and anvils.</description>
 
     <artifactId>LoreBook</artifactId>
 
