add OpenNow (experimental)

--- a/all-in-one/pom.xml
+++ b/all-in-one/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>LoreBook</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>jp.jyn</groupId>
+            <artifactId>OpenNow</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
