--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>DocklessVehicle</module>
         <module>ThisWorld</module>
         <module>LoreBook</module>
+        <module>OpenNow</module>
     </modules>
 
     <developers>
