using permission message.

--- a/DocklessVehicle/src/main/resources/config.yml
+++ b/DocklessVehicle/src/main/resources/config.yml
@@ -1,4 +1,5 @@
-boat: player # always(true)/player(no-player)/empty(only-empty)/first(is-first)/false
+# always(true)/player(no-player)/empty(only-empty)/first(is-first)/false
+boat: player
 minecart: true
 sendToInventory: true
 ready: "Please right-click vehicle."
